--- a/modPage/head.html
+++ b/modPage/head.html
@@ -3,3 +3,4 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>게시판 사이트</title>
     <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/nav.css">
